<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearPlatoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/tipo"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#A1887F" />

        <EditText
            android:id="@+id/editTextIngredientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ingredientes"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#78909C" />

        <EditText
            android:id="@+id/editTextCosto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/costo"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextPVP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pvp"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_crear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>